# lidar-slam-lanelet2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: accuracy_table.csv  accuracy_table_v1_broken_snapshot.csv  benchmark_manifest.json  latency_table.csv  robustness_gnss_denied.csv
benchmarks/tight_vs_loose/: ape_compare.csv  bias_00.csv
benchmarks/uncertainty/: marginal_cov_00_loose.csv  sup06_report_00.json
configs/: default.yaml
docker/: Dockerfile
scripts/: audit_baseline_configs.py  benchmark_stage5.py  bonus_ape_matrix.py  compare_tight_vs_loose.py  diagnose_liosam_run.py  download_kitti_raw_imu.py  eval_loop_closure_pr.py  run_baseline_compare.py  run_pipeline.py  run_sup06.py  sweep_robust_kernel.py  verify_bag_smoke.py
src/: __init__.py
src/benchmarks/: __init__.py  evaluator.py  git_info.py  gnss_denial.py  manifest.py  timing.py
src/cache/: __init__.py  layered_cache.py
src/data/: imu_loader.py  kitti_loader.py  transforms.py
src/export/: __init__.py  lanelet2_export.py
src/fusion/: __init__.py  eskf.py
src/mapping/: __init__.py  feature_extraction.py  map_builder.py
src/odometry/: __init__.py  kiss_icp_wrapper.py
src/optimization/: __init__.py  imu_factor.py  loop_closure.py  pose_graph.py  scan_context.py
src/visualization/: pointcloud_render.py  trajectory_plot.py  uncertainty_plot.py
tests/: test_cache.py  test_data_loader.py  test_export.py  test_fusion.py  test_imu_factor.py  test_mapping.py  test_optimization.py  test_pose_graph_marginals.py  test_scan_context.py
